# rdsolver

./: .gitignore  README.md  solver_overview.xml
archive/20170427/: cell.h
archive/20171023/roe/: amplitude_plot.py  constants.h  density.txt  main.cpp  mass_flux.txt  mass_flux_plot.py  pressure.txt  sod  velocity.txt
one_dimension/: a.out  cell.h  density.txt  density_plot.py  main.cpp  vertex.h
one_dimension/archive/20170427/: a.out  euler.cpp  integrate.cpp  main.cpp  residual.cpp  vertex.h
one_dimension/roe/: a.out  cell.h  centre.h  constants.h  density.txt  density_plot.py  face.h  gauss  main.cpp  main.sublime-workspace  mass_flux.txt  pressure.txt  setup.cpp  sine  spare.cpp  velocity.txt  vertex.h  vertices.h
one_dimension/roe/a.out.dSYM/Contents/Resources/DWARF/: a.out
rd/: CMakeLists.txt  a.out  all_functions.h  all_functions3D.h  base.cpp  base.h  capacity_test.cpp  centre2D.h  constants.h  constants.h.TEMPALTE  constants.h.TEMPLATE  constants3D.h  constants3D.h.TEMPALTE  constants3D.h.TEMPLATE  density.txt  gravity2D.cpp  gravity3D.cpp  inverse.cpp  inverse.h  io2D.cpp  io3D.cpp  main.cpp  main3D.cpp  mesh_test.py  nmarray.h  nmarray_test.cpp  plot.py  plot2D.py  positions.txt  pressure.txt  run.sh  run3D.sh  sedov  setup2D.cpp  setup3D.cpp  sine  sod  source2D.cpp  source3D.cpp  template_constants.h  (+11 more)
rd/sod.dSYM/Contents/Resources/DWARF/: sod
rd/src/: all_functions.h  base.cpp  base.h  constants.h.TEMPLATE  inverse.cpp  io2D.cpp  main.cpp  setup2D.cpp  source2D.cpp  timestep.cpp  triangle2D.h  vertex2D.h
rd/test/: a.out  capacity_test.cpp  cgal_test.cpp  comp_inf_test.sh  create_points.py  create_points_central.py  dgees_example.f  eigen_test.cpp  hello  inflow_test.cpp  inverse_test.cpp  inversion_test.cpp  order_triangles.py  para_hello_world.cpp  plot_triangles.py  read_test.cpp  run_rbox.sh  schur_test.cpp  sedov_solution.py
rd/test.dSYM/Contents/Resources/DWARF/: test
rd/test/cgal/: CMakeLists.txt.bak  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cgal_create_CMakeLists  cgal_test  cgal_test.cpp  cgal_test2  cmake_install.cmake  convert_cgal_periodic_2D.py  output.tri  plot_cgal_triangles.py
rd/test/cgal/data/: triangulation_prog1.cin
rd/triangulation/cgal/: CMakeLists.txt.bak  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cgal_periodic2D  cgal_periodic2D.cpp  cgal_test  cgal_test.cpp  cmake_install.cmake  compile_cgal.sh  output.tri  plot_one_sheet.py
rd/triangulation/cgal/2d/: cgal_periodic2D.cpp  compile_cgal_2d.sh  run_cgal_2d.sh
rd/triangulation/cgal/3d/: cgal_periodic3D.cpp  compile_cgal_3d.sh  run_cgal_3d.sh
rd/triangulation/qhull/: create_points.py  create_points_central.py  order_triangles.py  plot_triangles.py  run_rbox.sh
roe/: a.out  centre.h  centre3D.h  constants.h  density.txt  density_plot.py  density_slice.txt  face.h  face1D.h  face3D.h  gauss  io3D.cpp  linear  main.cpp  mass_flux.txt  mass_flux_plot.py  order_plot.py  plot1D.py  plot2D.py  plot3D.py  pressure.txt  sedov  sedov_plot.py  setup.cpp  setup1D.cpp  setup3D.cpp  sine  sod  spare.cpp  square  twoblast  velocity.txt  vor_plot2D.py
